--- a/app/src/main/res/layout/activity_input.xml
+++ b/app/src/main/res/layout/activity_input.xml
@@ -55,7 +55,7 @@
                 android:layout_marginTop="5dp"
                 android:background="@drawable/button_shape"
                 android:gravity="center"
-                android:inputType="numberPassword"
+                android:inputType="number"
                 android:textColor="@color/white"
                 android:textSize="20sp" />
 
