--- a/app/src/main/res/layout/activity_set.xml
+++ b/app/src/main/res/layout/activity_set.xml
@@ -50,6 +50,7 @@
                 android:layout_height="wrap_content">
 
                 <TextView
+                    android:id="@+id/setGender"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_alignParentStart="true"
@@ -85,6 +86,7 @@
                 android:layout_height="wrap_content">
 
                 <TextView
+                    android:id="@+id/setHeight"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_alignParentStart="true"
@@ -105,7 +107,7 @@
                     android:layout_centerVertical="true"
                     android:layout_marginRight="40dp"
                     android:gravity="center_vertical"
-                    android:text="160cm"
+                    android:text="160CM"
                     android:textColor="@color/white"
                     android:textSize="14sp" />
             </RelativeLayout>
@@ -120,6 +122,7 @@
                 android:layout_height="wrap_content">
 
                 <TextView
+                    android:id="@+id/setWeight"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_alignParentStart="true"
