--- a/app/src/main/res/layout/activity_about_sl.xml
+++ b/app/src/main/res/layout/activity_about_sl.xml
@@ -50,17 +50,37 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-                <TextView
-                    android:id="@+id/isFalse"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentStart="true"
-                    android:clickable="true"
-                    android:gravity="center_vertical"
-                    android:padding="20dp"
-                    android:text="@string/about_sl"
-                    android:textColor="@color/white"
-                    android:textSize="16sp" />
+                <ScrollView
+                    android:layout_width="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:layout_height="170dp">
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="170dp"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentStart="true"
+                            android:gravity="center"
+                            android:padding="5dp"
+                            android:text="使用说明"
+                            android:textColor="@color/white"
+                            android:textSize="16sp" />
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentStart="true"
+                            android:gravity="center_vertical"
+                            android:padding="10dp"
+                            android:text="@string/about_sl"
+                            android:textColor="@color/white"
+                            android:textSize="16sp" />
+                    </LinearLayout>
+                </ScrollView>
             </RelativeLayout>
         </LinearLayout>
     </RelativeLayout>
