--- a/app/src/main/res/layout/activity_about_sl.xml
+++ b/app/src/main/res/layout/activity_about_sl.xml
@@ -75,7 +75,8 @@
                             android:layout_height="wrap_content"
                             android:layout_alignParentStart="true"
                             android:gravity="center_vertical"
-                            android:padding="10dp"
+                            android:paddingLeft="10dp"
+                            android:paddingRight="10dp"
                             android:text="@string/about_sl"
                             android:textColor="@color/white"
                             android:textSize="16sp" />
