--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -85,51 +85,93 @@
             android:textSize="14sp" />
     </RelativeLayout>
 
-    <RelativeLayout
-        android:layout_width="match_parent"
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-       >
-
-        <TextView
-            android:id="@+id/step"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="-16.077dp"
-            android:background="@drawable/red_shape"
-            android:gravity="center"
-            android:text="@string/step"
-            android:textColor="@color/white"
-            android:textSize="18sp" />
+        android:orientation="horizontal">
 
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/step"
-            android:layout_centerHorizontal="true"
-            android:orientation="horizontal">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignBottom="@+id/step"
+            android:layout_alignEnd="@+id/step">
 
-            <TextView
-                android:id="@+id/distance"
-                android:layout_width="120dp"
-                android:layout_height="120dp"
-                android:background="@drawable/blue_shape"
-                android:gravity="center"
-                android:text="@string/distance"
-                android:textColor="@color/white"
-                android:textSize="18sp" />
+            <RelativeLayout
+                android:id="@+id/notTime"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true">
 
-            <TextView
-                android:id="@+id/calorie"
-                android:layout_width="120dp"
-                android:layout_height="120dp"
-                android:background="@drawable/green_shape"
-                android:gravity="center"
-                android:text="@string/calorie"
-                android:textColor="@color/white"
-                android:textSize="18sp" />
-        </LinearLayout>
-    </RelativeLayout>
+                <TextView
+                    android:id="@+id/step"
+                    android:layout_width="120dp"
+                    android:layout_height="120dp"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginBottom="-16.077dp"
+                    android:background="@drawable/red_shape"
+                    android:gravity="center"
+                    android:text="@string/step"
+                    android:textColor="@color/white"
+                    android:textSize="18sp" />
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/step"
+                    android:layout_centerHorizontal="true"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/distance"
+                        android:layout_width="120dp"
+                        android:layout_height="120dp"
+                        android:background="@drawable/blue_shape"
+                        android:gravity="center"
+                        android:text="@string/distance"
+                        android:textColor="@color/white"
+                        android:textSize="18sp" />
+
+                    <TextView
+                        android:id="@+id/calorie"
+                        android:layout_width="120dp"
+                        android:layout_height="120dp"
+                        android:background="@drawable/green_shape"
+                        android:gravity="center"
+                        android:text="@string/calorie"
+                        android:textColor="@color/white"
+                        android:textSize="18sp" />
+                </LinearLayout>
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_centerInParent="true">
+
+                <TextView
+                    android:id="@+id/timeAnimation"
+                    android:layout_width="140dp"
+                    android:layout_height="140dp"
+                    android:layout_centerInParent="true"
+                    android:background="@drawable/red_shape"
+                    android:gravity="center"
+                    android:textColor="@color/white"
+                    android:textSize="18sp"
+                    android:visibility="gone" />
+
+                <TextView
+                    android:id="@+id/time"
+                    android:layout_width="140dp"
+                    android:layout_height="140dp"
+                    android:layout_centerInParent="true"
+                    android:background="@drawable/red_shape"
+                    android:gravity="center"
+                    android:textColor="@color/white"
+                    android:textSize="18sp"
+                    android:visibility="gone" />
+            </RelativeLayout>
+        </RelativeLayout>
+    </LinearLayout>
 </RelativeLayout>
