修复电池电量显示

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,7 @@
                 android:layout_height="wrap_content"
                 android:drawableLeft="@mipmap/batteryfull"
                 android:gravity="center"
-                android:text="@string/battery"
+                android:text="@string/fullBattery"
                 android:textColor="@color/white"
                 android:textSize="14sp" />
 
