--- a/app/src/main/res/layout/activity_warning_set.xml
+++ b/app/src/main/res/layout/activity_warning_set.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/light_black"
-    tools:context="com.chenls.smartshoepad.main.SettingActivity">
+    tools:context="com.cqupt.pedometer.main.SettingActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
